feat: 添加示例客户端和VSCode任务配置
- 添加了Java Spring Boot示例客户端(demo-client)和Vue PKCE示例客户端(demo-vue-client)
- 在VSCode tasks.json中添加了运行示例的便捷任务
- 配置了CORS支持和禁用CSRF以支持授权服务器端点
- 添加了oidc-client-ts依赖用于前端OIDC集成
- 在DataSeeder中初始化示例客户端应用数据

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -51,7 +51,28 @@
             "type": "shell",
             "command": "java -jar target/aegis-auth-1.0.0.jar",
             "dependsOn": "Build All (Backend + Frontend)",
-            "problemMatcher": []
+        },
+        {
+            "label": "Run Java Demo",
+            "type": "shell",
+            "command": "mvn spring-boot:run",
+            "options": {
+                "cwd": "${workspaceFolder}/examples/java-spring-boot"
+            },
+            "group": "test",
+        },
+        {
+            "label": "Run Vue Demo",
+            "type": "shell",
+            "command": "npm run dev",
+            "options": {
+                "cwd": "${workspaceFolder}/examples/vue-pkce"
+            },
+            "group": "test",
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared"
+            }
         }
     ]
 }
